// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Rating Indicator Custom icons 1`] = `
<div
  class="example-container"
>
  
    
  <div
    class="fd-rating-indicator fd-rating-indicator--icon"
  >
    
        
    <div
      aria-label="Star Rating (out of 5)"
      class="fd-rating-indicator__container"
    >
      
            
      <input
        aria-label="0 star"
        class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
        id="rating-icon-0"
        name="rating-icon"
        type="radio"
        value="0"
      />
      
            
      <label
        aria-hidden="true"
        class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
        for="rating-icon-0"
      />
      

            
      <input
        aria-label="1 star"
        class="fd-rating-indicator__input"
        id="rating-icon-1"
        name="rating-icon"
        type="radio"
        value="1"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-icon-1"
      >
        
                
        <i
          class="fd-rating-indicator__label-rated sap-icon--notification"
        />
        
                
        <i
          class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
        />
        
            
      </label>
      
            
            
      <input
        aria-label="2 star"
        checked=""
        class="fd-rating-indicator__input"
        id="rating-icon-2"
        name="rating-icon"
        type="radio"
        value="2\\""
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-icon-2"
      >
        
                
        <i
          class="fd-rating-indicator__label-rated sap-icon--notification"
        />
        
                
        <i
          class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
        />
        
            
      </label>
      
            
            
      <input
        aria-label="3 star"
        class="fd-rating-indicator__input"
        id="rating-icon-3"
        name="rating-icon"
        type="radio"
        value="3"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-icon-3"
      >
        
                
        <i
          class="fd-rating-indicator__label-rated sap-icon--notification"
        />
        
                
        <i
          class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
        />
        
            
      </label>
      
            
            
      <input
        aria-label="4 star"
        class="fd-rating-indicator__input"
        id="rating-icon-4"
        name="rating-icon"
        type="radio"
        value="4"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-icon-4"
      >
        
                
        <i
          class="fd-rating-indicator__label-rated sap-icon--notification"
        />
        
                
        <i
          class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
        />
        
            
      </label>
      
            
            
      <input
        aria-label="5 star"
        class="fd-rating-indicator__input"
        id="rating-icon-5"
        name="rating-icon"
        type="radio"
        value="5"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-icon-5"
      >
        
                
        <i
          class="fd-rating-indicator__label-rated sap-icon--notification"
        />
        
                
        <i
          class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
        />
        
            
      </label>
      
        
    </div>
    
        
    <span
      class="fd-rating-indicator__dynamic-text"
    >
      (2 of 5)
    </span>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Rating Indicator Different values 1`] = `
<section>
  <div
    class="example-container"
  >
    
        
    <div
      class="fd-rating-indicator"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-max-value-5-0"
          name="rating-max-value-5"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-max-value-5-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-1"
          name="rating-max-value-5"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-max-value-5-2"
          name="rating-max-value-5"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-3"
          name="rating-max-value-5"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-4"
          name="rating-max-value-5"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-5-5"
          name="rating-max-value-5"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-5-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <div
      class="fd-rating-indicator"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-max-value-6-0"
          name="rating-max-value-6"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-max-value-6-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-6-1"
          name="rating-max-value-6"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-6-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-max-value-6-2"
          name="rating-max-value-6"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-6-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-6-3"
          name="rating-max-value-6"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-6-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-6-4"
          name="rating-max-value-6"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-6-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-6-5"
          name="rating-max-value-6"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-6-5"
        />
        
                
                
        <input
          aria-label="6 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-6-6"
          name="rating-max-value-6"
          type="radio"
          value="6"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-6-6"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 6)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <div
      class="fd-rating-indicator"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-max-value-7-0"
          name="rating-max-value-7"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-max-value-7-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-7-1"
          name="rating-max-value-7"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-max-value-7-2"
          name="rating-max-value-7"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-7-3"
          name="rating-max-value-7"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-7-4"
          name="rating-max-value-7"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-7-5"
          name="rating-max-value-7"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-5"
        />
        
                
                
        <input
          aria-label="6 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-7-6"
          name="rating-max-value-7"
          type="radio"
          value="6"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-6"
        />
        
                
                
        <input
          aria-label="7 star"
          class="fd-rating-indicator__input"
          id="rating-max-value-7-7"
          name="rating-max-value-7"
          type="radio"
          value="7"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-max-value-7-7"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 7)
      </span>
      
        
    </div>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Components/Rating Indicator Disabled 1`] = `
<div
  class="example-container"
>
  
    
  <div
    aria-disabled="true"
    class="fd-rating-indicator"
  >
    
        
    <div
      aria-label="Star Rating (out of 5)"
      class="fd-rating-indicator__container"
    >
      
            
      <input
        aria-label="0 star"
        class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
        disabled=""
        id="rating-disabled-0"
        name="rating-disabled"
        type="radio"
        value="0"
      />
      
            
      <label
        aria-hidden="true"
        class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
        for="rating-disabled-0"
      />
      

            
      <input
        aria-label="1 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-disabled-1"
        name="rating-disabled"
        type="radio"
        value="1"
      />
        
            
      <label
        class="fd-rating-indicator__label"
        for="rating-disabled-1"
      />
      
            
            
      <input
        aria-label="2 star"
        checked=""
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-disabled-2"
        name="rating-disabled"
        type="radio"
        value="2"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-disabled-2"
      />
      
            
            
      <input
        aria-label="3 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-disabled-3"
        name="rating-disabled"
        type="radio"
        value="3"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-disabled-3"
      />
      
            
            
      <input
        aria-label="4 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-disabled-4"
        name="rating-disabled"
        type="radio"
        value="4"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-disabled-4"
      />
      
            
            
      <input
        aria-label="5 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-disabled-5"
        name="rating-disabled"
        type="radio"
        value="5"
      />
      
            
      <label
        class="fd-rating-indicator__label"
        for="rating-disabled-5"
      />
      
        
    </div>
    
        
    <span
      class="fd-rating-indicator__dynamic-text"
    >
      (2 of 5)
    </span>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Rating Indicator Display mode 1`] = `
<div
  class="example-container"
>
  
        
  <div
    class="fd-rating-indicator fd-rating-indicator--display-mode"
  >
    
            
    <div
      aria-label="Star Rating (out of 5)"
      class="fd-rating-indicator__container"
    >
      
                
      <input
        aria-label="0 star"
        class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
        disabled=""
        id="rating-display-mode-0"
        name="rating-display-mode"
        type="radio"
        value="0"
      />
      
                
      <label
        aria-hidden="true"
        class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
        for="rating-display-mode-0"
      />
      

                
      <input
        aria-label="1 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-display-mode-1"
        name="rating-display-mode"
        type="radio"
        value="1"
      />
        
                
      <label
        class="fd-rating-indicator__label"
        for="rating-display-mode-1"
      />
      
                
                
      <input
        aria-label="2 star"
        checked=""
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-display-mode-2"
        name="rating-display-mode"
        type="radio"
        value="2"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-display-mode-2"
      />
      
                
                
      <input
        aria-label="3 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-display-mode-3"
        name="rating-display-mode"
        type="radio"
        value="3"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-display-mode-3"
      />
      
                
                
      <input
        aria-label="4 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-display-mode-4"
        name="rating-display-mode"
        type="radio"
        value="4"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-display-mode-4"
      />
      
                
                
      <input
        aria-label="5 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-display-mode-5"
        name="rating-display-mode"
        type="radio"
        value="5"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-display-mode-5"
      />
      
            
    </div>
    
            
    <span
      class="fd-rating-indicator__dynamic-text"
    >
      (2 of 5)
    </span>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Components/Rating Indicator Half values 1`] = `
<section>
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 185px;"
    >
      Default:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--half-star"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-half-sizes-0"
          name="rating-half-sizes"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-half-sizes-0"
        />
        

                
        <input
          aria-label="half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-05"
          name="rating-half-sizes"
          type="radio"
          value="0.5"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-05"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-1"
          name="rating-half-sizes"
          type="radio"
          value="1"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-1"
        />
        
                
                
        <input
          aria-label="1 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-15"
          name="rating-half-sizes"
          type="radio"
          value="1.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-15"
        />
        
                
                
        <input
          aria-label="2 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-2"
          name="rating-half-sizes"
          type="radio"
          value="2\\""
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-2"
        />
        
                
                
        <input
          aria-label="2 and half star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-half-sizes-25"
          name="rating-half-sizes"
          type="radio"
          value="2.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-25"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-3"
          name="rating-half-sizes"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-3"
        />
        
                
                
        <input
          aria-label="3 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-35"
          name="rating-half-sizes"
          type="radio"
          value="3.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-35"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-4"
          name="rating-half-sizes"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-4"
        />
        
                
                
        <input
          aria-label="4 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-45"
          name="rating-half-sizes"
          type="radio"
          value="4.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-45"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-5"
          name="rating-half-sizes"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2.5 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 185px;"
    >
      Custome icons:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--half-star fd-rating-indicator--icon"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-half-sizes-custome-icons-0"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-half-sizes-custome-icons-0"
        />
        

                
        <input
          aria-label="half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-05"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="0.5"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-05"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-1"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="1"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-1"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="1 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-15"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="1.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-15"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="2 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-2"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="2\\""
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-2"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="2 and half star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-25"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="2.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-25"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-3"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-3"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="3 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-35"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="3.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-35"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-4"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-4"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="4 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-45"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="4.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-45"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-5"
          name="rating-half-sizes-custome-icons"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-5"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2.5 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 185px;"
    >
      Custome icons and size --lg:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--half-star fd-rating-indicator--icon fd-rating-indicator--lg"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-half-sizes-custome-icons-lg-0"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-half-sizes-custome-icons-lg-0"
        />
        

                
        <input
          aria-label="half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-05"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="0.5"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-05"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-1"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="1"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-1"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="1 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-15"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="1.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-15"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="2 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-2"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="2\\""
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-2"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="2 and half star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-25"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="2.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-25"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-3"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-3"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="3 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-35"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="3.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-35"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-4"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-4"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="4 and half star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-45"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="4.5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-45"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-half-sizes-custome-icons-lg-5"
          name="rating-half-sizes-custome-icons-lg"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-half-sizes-custome-icons-lg-5"
        >
          
                    
          <i
            class="fd-rating-indicator__label-rated sap-icon--notification"
          />
          
                    
          <i
            class="fd-rating-indicator__label-unrated sap-icon--bo-strategy-management"
          />
          
                
        </label>
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2.5 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Components/Rating Indicator Non-interactive 1`] = `
<div
  class="example-container"
>
  
        
  <div
    class="fd-rating-indicator fd-rating-indicator--non-interactive"
  >
    
            
    <div
      aria-label="Star Rating (out of 5)"
      class="fd-rating-indicator__container"
    >
      
                
      <input
        aria-label="0 star"
        class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
        disabled=""
        id="rating-non-interactive-mode-0"
        name="rating-non-interactive-mode"
        type="radio"
        value="0"
      />
      
                
      <label
        aria-hidden="true"
        class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
        for="rating-non-interactive-mode-0"
      />
      

                
      <input
        aria-label="1 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-non-interactive-mode-1"
        name="rating-non-interactive-mode"
        type="radio"
        value="1"
      />
        
                
      <label
        class="fd-rating-indicator__label"
        for="rating-non-interactive-mode-1"
      />
      
                
                
      <input
        aria-label="2 star"
        checked=""
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-non-interactive-mode-2"
        name="rating-non-interactive-mode"
        type="radio"
        value="2"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-non-interactive-mode-2"
      />
      
                
                
      <input
        aria-label="3 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-non-interactive-mode-3"
        name="rating-non-interactive-mode"
        type="radio"
        value="3"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-non-interactive-mode-3"
      />
      
                
                
      <input
        aria-label="4 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-non-interactive-mode-4"
        name="rating-non-interactive-mode"
        type="radio"
        value="4"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-non-interactive-mode-4"
      />
      
                
                
      <input
        aria-label="5 star"
        class="fd-rating-indicator__input"
        disabled=""
        id="rating-non-interactive-mode-5"
        name="rating-non-interactive-mode"
        type="radio"
        value="5"
      />
      
                
      <label
        class="fd-rating-indicator__label"
        for="rating-non-interactive-mode-5"
      />
      
            
    </div>
    
            
    <span
      class="fd-rating-indicator__dynamic-text"
    >
      (2 of 5)
    </span>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Components/Rating Indicator Sizes 1`] = `
<section>
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Default (Medium):
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--hide-dynamic-text"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-0"
          name="rating"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-1"
          name="rating"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-2"
          name="rating"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-2"
        />
        
    
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-3"
          name="rating"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-3"
        />
                    
    
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-4"
          name="rating"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-4"
        />
        
    
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-5"
          name="rating"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Extra small:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--xs"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-xs-0"
          name="rating-xs"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-xs-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-xs-1"
          name="rating-xs"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-xs-1"
        />
        
    
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-xs-2"
          name="rating-xs"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-xs-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-xs-3"
          name="rating-xs"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-xs-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-xs-4"
          name="rating-xs"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-xs-4"
        />
        
    
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-xs-5"
          name="rating-xs"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-xs-5"
        />
        
            
      </div>
      

            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Small:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--sm"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-s-0"
          name="rating-s"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-s-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-s-1"
          name="rating-s"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-s-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-s-2"
          name="rating-s"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-s-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-s-3"
          name="rating-s"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-s-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-s-4"
          name="rating-s"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-s-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-s-5"
          name="rating-s"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-s-5"
        />
        
            
      </div>
      

            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Large:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--lg"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-l-0"
          name="rating-l"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-l-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-l-1"
          name="rating-l"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-l-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-l-2"
          name="rating-l"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-l-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-l-3"
          name="rating-l"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-l-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-l-4"
          name="rating-l"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-l-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-l-5"
          name="rating-l"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-l-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Cozy:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--cozy"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-cozy-0"
          name="rating-cozy"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-cozy-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-cozy-1"
          name="rating-cozy"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-cozy-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-cozy-2"
          name="rating-cozy"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-cozy-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-cozy-3"
          name="rating-cozy"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-cozy-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-cozy-4"
          name="rating-cozy"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-cozy-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-cozy-5"
          name="rating-cozy"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-cozy-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Compact:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--compact"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-compact-0"
          name="rating-compact"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-compact-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-compact-1"
          name="rating-compact"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-compact-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-compact-2"
          name="rating-compact"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-compact-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-compact-3"
          name="rating-compact"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-compact-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-compact-4"
          name="rating-compact"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-compact-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-compact-5"
          name="rating-compact"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-compact-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    class="example-container"
  >
    
        
    <span
      style="min-width: 150px;"
    >
      Condensed:
    </span>
    
        
    <div
      class="fd-rating-indicator fd-rating-indicator--condensed"
    >
      
            
      <div
        aria-label="Star Rating (out of 5)"
        class="fd-rating-indicator__container"
      >
        
                
        <input
          aria-label="0 star"
          class="fd-rating-indicator__input fd-rating-indicator__input--zero-rating"
          id="rating-condensed-0"
          name="rating-condensed"
          type="radio"
          value="0"
        />
        
                
        <label
          aria-hidden="true"
          class="fd-rating-indicator__label fd-rating-indicator__label--zero-rating"
          for="rating-condensed-0"
        />
        

                
        <input
          aria-label="1 star"
          class="fd-rating-indicator__input"
          id="rating-condensed-1"
          name="rating-condensed"
          type="radio"
          value="1"
        />
          
                
        <label
          class="fd-rating-indicator__label"
          for="rating-condensed-1"
        />
        
                
                
        <input
          aria-label="2 star"
          checked=""
          class="fd-rating-indicator__input"
          id="rating-condensed-2"
          name="rating-condensed"
          type="radio"
          value="2"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-condensed-2"
        />
        
                
                
        <input
          aria-label="3 star"
          class="fd-rating-indicator__input"
          id="rating-condensed-3"
          name="rating-condensed"
          type="radio"
          value="3"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-condensed-3"
        />
        
                
                
        <input
          aria-label="4 star"
          class="fd-rating-indicator__input"
          id="rating-condensed-4"
          name="rating-condensed"
          type="radio"
          value="4"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-condensed-4"
        />
        
                
                
        <input
          aria-label="5 star"
          class="fd-rating-indicator__input"
          id="rating-condensed-5"
          name="rating-condensed"
          type="radio"
          value="5"
        />
        
                
        <label
          class="fd-rating-indicator__label"
          for="rating-condensed-5"
        />
        
            
      </div>
      
            
      <span
        class="fd-rating-indicator__dynamic-text"
      >
        (2 of 5)
      </span>
      
        
    </div>
    
    
  </div>
  

</section>
`;
